<resources>
    <string name="app_name">PlantNGo</string>


    <string name="slogan">Get ready to embark on your \nbotanical adventure with Plant\'NGo!</string>

    <string name="welcome_back">Welcome back!</string>
    <string name="email">Email</string>
    <string name="example_gmail">username@gmail.com</string>
    <string name="password">Password</string>
    <string name="encrypted_password">******</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log In</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">or</string>
    <string name="google_login">Login With Google</string>
    <string name="login_with_google">Login With Google</string>
    <string name="welcome_image">Welcome image</string>
    <string name="plantngo_app_icon">PlantNGo app icon</string>
    <string name="camera">Camera</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="profile">Profile</string>
    <string-array name="cat_names">
        <item>scribble</item>
        <item>gucci</item>
        <item>zinc</item>
        <item>pippin</item>
        <item>scribble</item>
        <item>gucci</item>
        <item>zinc</item>
        <item>pippin</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>