<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        tools:layout_editor_absoluteX="-30dp"
        tools:layout_editor_absoluteY="339dp">

        <TextView
            android:id="@+id/welcome_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="36dp"
            android:text="@string/welcome_back"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/email_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/example_gmail"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/password_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/encrypted_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/forgotPassword_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="36dp"
            android:text="@string/forgot_password"
            android:textColor="@color/primary_green" />

        <Button
            android:id="@+id/login_button"
            style="@style/CustomButton"
            android:tag="login_button"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/no_account_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/no_account" />

            <TextView
                android:id="@+id/sign_up_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="36dp"
                android:text="@string/sign_up"
                android:textColor="@color/secondary_green"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/third_party_login_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:text="@string/or" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:paddingLeft="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
  />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_with_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:textColor="@color/black"
                android:text="@string/google_login"
                android:paddingStart="15dp"
                android:paddingEnd="20dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>