<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        tools:layout_editor_absoluteX="-30dp"
        tools:layout_editor_absoluteY="339dp">

        <TextView
            android:id="@+id/register_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="36dp"
            android:text="Register"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/new_email_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/new_email_editText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/example_gmail"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/new_password_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/new_password_editText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/encrypted_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/confirm_password_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Password"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/confirm_password_editText"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/encrypted_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register_button"
            style="@style/CustomButton"
            android:tag="register_button"
            android:text="Register" />

        <TextView
            android:id="@+id/verify_email_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Please verify your email address."
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp" />

        <Button
            android:id="@+id/verify_email_button"
            style="@style/CustomButton"
            android:layout_width="wrap_content"
            android:tag="verify_email_button"
            android:text="Verify Email"
            android:layout_gravity="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>